# physicsnemo-curator

./: .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TUTORIAL.md  asv.conf.json  deny.toml  pipeline.yaml  pyproject.toml  tox.ini
.claude/skills/add-filter/: SKILL.md
.claude/skills/add-sink/: SKILL.md
.claude/skills/add-source/: SKILL.md
.claude/skills/curator-reviewer/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/tools/: asv.ts  cargo-clippy.ts  cargo-deny.ts  cargo-fmt.ts  cargo-nextest.ts  commit.ts  compress-images.ts  gh-run.ts  greptile-review.ts  open-pr.ts  pytest.ts  ruff-format.ts  ruff.ts  sphinx-build.ts  ty.ts  uv.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: header_check.py  patch_namespace.sh
.github/workflows/: benchmark.yml  blossom-ci.yml  build.yml  ci.yml  docs.yml  lint.yml  test.yml
bash/: luminary_suv_estate.sh  luminary_suv_fastback.sh  luminary_wing.sh
benchmarks/: __init__.py  _helpers.py  asv_build.py  bench_atm.py  bench_backends.py  bench_d3plot.py  bench_da.py  bench_import.py  bench_lmdb_reader.py  bench_mesh.py  bench_pipeline.py  bench_profiling.py  bench_store.py  bench_vtk_reader.py
docs/: Makefile  benchmarking.md  conf.py  index.md
docs/_extra/benchmarks/: index.html
docs/_static/: custom.css
docs/api/: index.md
docs/developer-guide/: agents.md  benchmarking.md  extending.md  index.md  style.md
docs/domains/: alch.md  atm.md  da.md  index.md  mesh.md
docs/extending/: filters.md  index.md  sinks.md  sources.md
docs/specs/: 2026-04-15-atomic-stats-scatter-widget-design.md  2026-04-15-atomic-stats-scatter-widget-plan.md
docs/superpowers/plans/: 2026-04-04-era5-multi-backend.md  2026-04-04-pipeline-profiling.md
docs/superpowers/specs/: 2026-04-04-era5-multi-backend-design.md  2026-04-04-pipeline-profiling-design.md
docs/user-guide/: architecture.md  checkpointing.md  cli.md  da.md  dashboard.md  datasets.md  index.md  installation.md  mesh.md  parallel-safety.md  parallel.md  profiling.md  quickstart.md
examples/: GALLERY_HEADER.rst  README.md
examples-old/ansys_rst_to_zarr/: Readme.md  rst_data_source.py  rst_to_zarr.ipynb  run_etl.py
examples-old/external_aerodynamics/: data_analysis.ipynb  data_sources.py  data_transformations.py  dataset_validator.py  run_etl.py
examples-old/structural_mechanics/crash/: data_transformations.py
examples-old/tutorials/etl_hdf5_to_zarr/: hdf5_to_zarr.ipynb  tutorial_validator.py
examples/_basics/00_pipeline/: README.md  main.py
examples/_basics/01_parallel/: README.md  main.py
examples/_basics/02_checkpoint/: README.md  main.py
examples/_basics/03_dashboard/: README.md  main.py
examples/_basics/checkpoint/: README.md  main.py
examples/_basics/parallel/: README.md  main.py
examples/_basics/pipeline/: README.md  main.py
examples/_basics/profiling/: README.md
examples/_extending/custom_filter/: README.md  main.py
examples/_extending/custom_sink/: README.md  main.py
examples/_extending/custom_source/: README.md  main.py
examples/alch/: GALLERY_HEADER.rst  alch_omol25_etl.py
examples/ansys_rst_to_zarr/: Readme.md  rst_to_zarr_transformation.py  zarr_data_source.py
examples/atm/: GALLERY_HEADER.rst  alch_omol25_etl.py
examples/atm/omol25/: README.md
examples/atm/omol25_etl/: README.md  main.py
examples/cae/: GALLERY_HEADER.rst  cae_ansys_thermal.py  cae_crash_simulation.py  cae_drivaerml_etl.py  cae_external_aerodynamics.py  cae_vtk_profiling.py
examples/cae/ahmedml/: README.md  plot.py
examples/config/: domino_etl.yaml  external_aero_etl_drivaerml.yaml  external_luminary_suv.yaml  external_luminary_wing.yaml  tutorial_config.yaml
examples/da/: GALLERY_HEADER.rst  da_era5_etl.py
examples/earth2/: GALLERY_HEADER.rst  earth2_era5_etl.py
examples/extending/: GALLERY_HEADER.rst  extending_custom_filter.py  extending_custom_sink.py  extending_custom_source.py
examples/external_aerodynamics/: External_Aero_Data_Processing_Reference.md  constants.py  data_sources.py  data_transformations.py  external_aero_geometry_data_processors.py  external_aero_global_params_data_processors.py  external_aero_surface_data_processors.py  external_aero_volume_data_processors.py  paths.py  schemas.py
examples/getting_started/: 01_getting_started_pipeline.py  02_getting_started_parallel.py  03_getting_started_checkpoint.py  04_getting_started_profiling.py  GALLERY_HEADER.rst  getting_started_parallel.py  getting_started_profiling.py
examples/mesh/: GALLERY_HEADER.rst  mesh_ansys_thermal.py  mesh_drivaerml_etl.py  mesh_external_aerodynamics.py  mesh_vtk_profiling.py
physicsnemo_curator/etl/: data_sources.py
src/curator/: __init__.py  _lib.pyi
src/physicsnemo_curator/: __init__.py  _lib.pyi
src/rust/: Cargo.toml  build.rs
src/rust/benches/: benchmarks.rs
src/rust/src/: lib.rs
src/rust/src/d3plot/: bindings.rs  kfile.rs  mod.rs  stress.rs  thickness.rs
src/rust/src/lmdb/: bindings.rs  mod.rs  reader.rs
src/rust/src/vtk/: bindings.rs  mesh.rs  mod.rs  parser.rs  reader.rs
test/: conftest.py  test_core_pipeline.py  test_core_store.py  test_da_pipeline.py  test_dataset_sources.py  test_mesh_filters.py  test_mesh_pipeline.py  test_parallel.py
test/alch/: test_aselmdb_source.py  test_atomic_stats.py  test_zarr_writer.py
test/atm/: test_aselmdb_source.py  test_atomic_info.py  test_atomic_stats.py  test_lmdb_rust.py  test_zarr_writer.py
test/core/: test_cache.py  test_checkpoint.py  test_logging.py  test_pipeline.py  test_pipeline_store.py  test_profiling.py  test_serialization.py  test_store.py
test/da/: test_pipeline.py
test/dashboard/: test_atm_widget.py  test_data.py
test/mesh/: test_ansys_rst.py  test_d3plot.py  test_filters.py  test_ns_cylinder.py  test_pipeline.py  test_quality.py  test_sources.py  test_vtk_rust.py  test_wall_node.py
test/run/: test_backends.py  test_base.py  test_partitions.py  test_profiling_backends.py
test/wiz/: test_cache_cli.py
tests/ci_tests/: header_check.py
(+346 files in other folders)
