# SPDX-FileCopyrightText: Copyright (c) 2025 - 2026 NVIDIA CORPORATION & AFFILIATES.
# SPDX-FileCopyrightText: All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "physicsnemo-curator"
version = "0.1.0"
description = "Rust-based ETL toolkit for deep learning data curation with Python APIs"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fsspec>=2023.1.0",
    "textual>=1.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
loky = [
    "joblib>=1.3",
]
dask = [
    "dask>=2024.1",
]
mesh = [
    "nvidia-physicsnemo>=2.0",
    "pyvista",
    "pyarrow",
    "torch",
    "warp-lang",
    "s3fs",
    "tqdm",
    "tensordict",
    "jaxtyping",
    "lasso-python",
    "huggingface_hub",
    "ansys-dpf-core>=0.12",
    "zarr>=3.0",
]
da = [
    "xarray>=2024.1",
    "earth2studio @ git+https://github.com/NVIDIA/earth2studio.git@main",
    "zarr>=3.0",
    "gcsfs>=2024.1",
]
atm = [
    "nvalchemi-toolkit",
    "ase>=3.26.0",
    "lmdb",
    "torch",
    "pyarrow",
]
dashboard = [
    "panel>=1.3",
    "panel-material-ui>=0.9",
    "holoviews>=1.18",
    "bokeh>=3.3",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.scripts]
psnc = "physicsnemo_curator.wiz:main"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "ty>=0.0.26",
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "pytest-benchmark>=5.0",
    "asv>=0.6",
    "pre-commit>=4.0",
    "interrogate>=1.7",
    "maturin>=1.0,<2.0",
    "pyyaml>=6.0",
    "pytest-asyncio>=1.3.0",
]
docs = [
    "sphinx>=9.0,<10",
    "nvidia-sphinx-theme>=0.0.9",
    "myst-parser>=5.0,<6",
    "sphinx-autodoc-typehints>=3.1,<3.7",
    "sphinx-autoapi>=3.8,<4",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "numpydoc>=1.10",
]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[tool.uv]
# The mesh/da/atm optional extras have heavy or private dependencies
# (physicsnemo, torch, earth2studio, etc.) not on PyPI. Install them explicitly:
#   pip install -e ".[mesh]"
default-groups = ["dev"]

# physicsnemo is a private NVIDIA package not on PyPI. Provide metadata
# so uv can resolve the dependency graph without a registry lookup.
[[tool.uv.dependency-metadata]]
name = "nvidia-physicsnemo"
version = "2.0.0"
requires-dist = [
    "torch>=2.5.0",
    "numpy>=1.22.4",
]

# nvalchemi-toolkit is a private NVIDIA package not on PyPI.
# Declare its actual dependencies so uv resolves them correctly.
[[tool.uv.dependency-metadata]]
name = "nvalchemi-toolkit"
version = "0.1.0"
requires-dist = [
    "ase>=3.27.0",
    "nvalchemi-toolkit-ops[torch]>=0.3.0",
    "torch>=2.5.1",
    "loguru",
    "numpy",
    "jaxtyping>=0.3.2",
    "tensordict>=0.11.0",
    "pydantic>=2.11.7",
    "dm-tree>=0.1.8",
    "plum-dispatch>=2.5.7",
    "zarr>=3",
    "periodictable==2.0.2",
]

# nvalchemi-toolkit-ops is a private NVIDIA package not on PyPI.
[[tool.uv.dependency-metadata]]
name = "nvalchemi-toolkit-ops"
version = "0.3.0"
requires-dist = [
    "warp-lang>=1.10.0",
    "numpy",
    "torch>=2.8.0; extra == 'torch'",
]
provides-extras = ["torch"]

[tool.uv.sources]
nvidia-physicsnemo = { git = "https://github.com/NVIDIA/physicsnemo" }
nvalchemi-toolkit = { git = "https://github.com/NVIDIA/nvalchemi-toolkit" }
nvalchemi-toolkit-ops = { git = "https://github.com/NVIDIA/nvalchemi-toolkit-ops" }

# ---------------------------------------------------------------------------
# ty (type checking)
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unresolved-import = "ignore"
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["test/**"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

# ---------------------------------------------------------------------------
# Maturin (Rust/PyO3 build)
# ---------------------------------------------------------------------------
[tool.maturin]
python-source = "src"
manifest-path = "src/rust/Cargo.toml"
module-name = "physicsnemo_curator._lib"

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["examples-old", "benchmarks"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["S101", "D"]
"examples/**" = ["D", "E402", "ERA"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-v --tb=short"
markers = [
    "unit: fast isolated unit tests — no I/O, no GPU, no network",
    "integration: tests that touch the filesystem, network, or multiple components",
    "e2e: end-to-end pipeline tests (source → filters → sink)",
    "device: parametrised across compute devices (cpu, cuda)",
    "requires(group): declares the dependency group needed (mesh, da, atm, loky, dask)",
    "mesh: tests requiring the mesh dependency group (auto-added by requires)",
    "da: tests requiring the da dependency group (auto-added by requires)",
    "atm: tests requiring the atm dependency group (auto-added by requires)",
    "loky: tests requiring the loky extra (joblib)",
    "dask: tests requiring the dask extra",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
]

# ---------------------------------------------------------------------------
# Coverage (pytest-cov)
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["physicsnemo_curator"]
omit = [
    "test/*",
    "docs/*",
    "*/benchmarks/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

# ---------------------------------------------------------------------------
# Interrogate (docstring coverage)
# ---------------------------------------------------------------------------
[tool.interrogate]
fail-under = 99
ignore-init-method = true
ignore-init-module = true
ignore-module = true
ignore-private = true
ignore-semiprivate = true
ignore-magic = true
exclude = ["setup.py", "test", "build", "docs", "examples-old", "benchmarks", ".asv"]
ignore-regex = [
    "forward",
    "backward",
    "reset_parameters",
    "extra_repr",
    "MetaData",
    "apply_activation",
    "exec_activation",
]
color = true
verbose = 2
