[package]
name = "physicsnemo-curator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust core for physicsnemo-curator ETL toolkit"

[lib]
name = "physicsnemo_curator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py312"] }
numpy = "0.28"
quick-xml = "0.37"
rayon = "1.10"
base64 = "0.22"
flate2 = "1.1"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.19"

[[bench]]
name = "benchmarks"
harness = false
